--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   fluttertoast: ^8.0.8
+  html: ^0.15.0
+  flutter_html: ^2.1.5
 
 dev_dependencies:
   flutter_test:
