--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.13.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -31,6 +31,12 @@ dependencies:
   fluttertoast: ^8.0.8
   html: ^0.15.0
   flutter_html: ^2.1.5
+  hooks_riverpod: ^0.14.0+5
+  flutter_hooks: ^0.18.1
+  dio: ^4.0.1
+  shared_preferences: ^2.0.7
+  # html: ^0.15.0
+  # http: ^0.13.2
 
 dev_dependencies:
   flutter_test:
