--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   flutter_hooks: ^0.18.1
   dio: ^4.0.1
   shared_preferences: ^2.0.7
+  multiselect: ^0.0.4
+  intl: ^0.17.0
   # html: ^0.15.0
   # http: ^0.13.2
 
